broken css fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10673,6 +10673,12 @@ a.text-dark:focus {
   padding: 32px 32px;
 }
 
+@media (max-width: 425px) {
+  .content-3 .texto {
+    padding: 48px 0px;
+  }
+}
+
 .content-3 .texto .titulo {
   font-family: "Poppins";
   font-size: 24px;
@@ -10684,6 +10690,16 @@ a.text-dark:focus {
   font-family: "Poppins";
   font-size: 16px;
   color: white;
+}
+
+@media (max-width: 425px) {
+  .content-3 .texto .conteudo {
+    margin-top: 16px;
+    font-family: "Poppins";
+    font-size: 18px;
+    color: white;
+    text-align: justify;
+  }
 }
 
 .content-3 .btn-1 {
@@ -10870,7 +10886,7 @@ body {
 @media (max-width: 425px) {
   .paralax.n2 {
     background-position-y: 45px;
-    height: 1300px;
+    height: 1450px;
     width: 100%;
     padding-top: 20px;
     padding-left: 5px;
@@ -11114,6 +11130,39 @@ body {
 
 .main-slider .slick-dots li.slick-active button {
   background-color: #d8d8d8;
+}
+
+@media (max-width: 425px) {
+  .paralax.n1 .texto-1 {
+    width: 100%;
+    height: unset;
+    margin-left: 8px;
+    right: 0;
+  }
+
+  .paralax.n1 .texto-1 .title {
+    margin: 32px 0px;
+    font-family: cahoma;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+    color: white;
+    line-height: 1.2;
+    padding: 0px 5%;
+    color: red;
+  }
+
+  .paralax.n1 .texto-1 .sub-title {
+    text-align: center;
+  }
+
+  .paralax.n1 .texto-1 .paralax.n1 .texto-1 .conteudo {
+    font-size: 26px;
+    color: white;
+    text-align: justify;
+    line-height: 1.3;
+    margin-top: 24px;
+  }
 }
 
 .infomarketing-header {
