--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -170,6 +170,11 @@
 
     .texto {
         padding: 32px 32px;
+
+        @media(max-width: 425px){
+            padding: 48px 0px;
+        }
+
         .titulo {
             font-family: 'Poppins';
             font-size: 24px;
@@ -181,6 +186,14 @@
             font-family: 'Poppins';
             font-size: 16px;
             color: white;
+
+            @media(max-width: 425px){
+                margin-top: 16px;
+                font-family: "Poppins";
+                font-size: 18px;
+                color: white;
+                text-align: justify;
+            }
         }
     }
 
@@ -372,7 +385,7 @@ body{
         }
         @media(max-width: 425px){
             background-position-y: 45px;
-            height: 1300px;
+            height: 1450px;
             width: 100%;
             padding-top: 20px;
             padding-left: 5px;
@@ -637,3 +650,39 @@ body{
         }
     }
 }
+
+
+@media(max-width: 425px){
+    .paralax.n1 .texto-1 {
+        width: 100%;
+        height: unset;
+        margin-left: 8px;
+        right: 0;
+
+        .title{
+            margin: 32px 0px;
+            font-family: cahoma;
+            font-size: 20px;
+            color: white;
+            text-align: center;
+            color: white;
+            line-height: 1.2;
+            padding: 0px 5%;
+            color: red;
+        }
+        .sub-title{
+            text-align: center;
+        }
+
+        .paralax.n1 .texto-1 .conteudo{
+            font-size: 26px;
+            color: white;
+            text-align: justify;
+            line-height: 1.3;
+            margin-top: 24px;
+        }
+    }
+}
+
+
+
